Update recipe images

--- a/001-recipes/recipes/blt.html
+++ b/001-recipes/recipes/blt.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>BLT Recipe</h1>
-        <img src="../assets/img/blt.jpg" alt="BLT sandwich.">
+        <img src="../assets/img/sandwich.jpg" alt="BLT sandwich.">
         <h3>Description</h3>
         <p>This is a recipe for making a BLT sandwich.</p>
         <h3>Ingredients</h3>
