--- a/001-recipes/index.html
+++ b/001-recipes/index.html
@@ -6,6 +6,7 @@
         <title>Odin's Recipes</title>
     </head>
     <body>
+        <img src="assets/img/chef.jpg" alt="A chef.">
         <h1>Odin's Recipes</h1>
         <ul>
             <li><a href="recipes/blt.html">BLT Recipe</a></li>
