--- a/001-recipes/recipes/blt.html
+++ b/001-recipes/recipes/blt.html
@@ -7,9 +7,15 @@
     </head>
     <body>
         <h1>BLT Recipe</h1>
-        <img src="../assets/img/sandwich.jpg" alt="BLT sandwich.">
+        <img src="../assets/img/sandwich.jpg" alt="A sandwich.">
         <h3>Description</h3>
         <p>This is a recipe for making a BLT sandwich.</p>
+        <h3>Time</h3>
+        <ul>
+            <li><strong>Prep:</strong> 10 min</li>
+            <li><strong>Cook:</strong> 10 min</li>
+            <li><strong>Total:</strong> 10 min</li>
+        </ul>
         <h3>Ingredients</h3>
         <ul>
             <li>Ingredient A</li>
