--- a/001-recipes/recipes/waffles.html
+++ b/001-recipes/recipes/waffles.html
@@ -10,6 +10,12 @@
         <img src="../assets/img/waffles.jpg" alt="Breakfast waffles.">
         <h3>Description</h3>
         <p>This is a recipe for making breakfast waffles.</p>
+        <h3>Time</h3>
+        <ul>
+            <li><strong>Prep:</strong> 10 min</li>
+            <li><strong>Cook:</strong> 10 min</li>
+            <li><strong>Total:</strong> 10 min</li>
+        </ul>
         <h3>Ingredients</h3>
         <ul>
             <li>Ingredient A</li>
