Change recipe types

--- a/001-recipes/recipes/cupcake.html
+++ b/001-recipes/recipes/cupcake.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>BLT Recipe</title>
+        <title>Cupcake Recipe</title>
     </head>
     <body>
-        <h1>BLT Recipe</h1>
-        <img src="../assets/img/sandwich.jpg" alt="A sandwich.">
+        <h1>Cupcake Recipe</h1>
+        <img src="../assets/img/cupcake.jpg" alt="A cupcake.">
         <h3>Description</h3>
-        <p>This is a recipe for making a BLT sandwich.</p>
+        <p>This is a recipe for making a cupcake.</p>
         <h3>Time</h3>
         <ul>
             <li><strong>Prep:</strong> 10 min</li>
