--- a/001-recipes/recipes/sandwich.html
+++ b/001-recipes/recipes/sandwich.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Carrot Cake Recipe</title>
+        <title>Sandwich Recipe</title>
     </head>
     <body>
-        <h1>Carrot Cake Recipe</h1>
-        <img src="../assets/img/carrotcake.jpg" alt="Carrot cake.">
+        <h1>Sandwich Recipe</h1>
+        <img src="../assets/img/sandwich.jpg" alt="A sandwich.">
         <h3>Description</h3>
-        <p>This is a recipe for making a carrot cake.</p>
+        <p>This is a recipe for making a sandwich.</p>
         <h3>Time</h3>
         <ul>
             <li><strong>Prep:</strong> 10 min</li>
