--- a/001-recipes/index.html
+++ b/001-recipes/index.html
@@ -9,8 +9,8 @@
         <img src="assets/img/chef.jpg" alt="A chef.">
         <h1>Odin's Recipes</h1>
         <ul>
-            <li><a href="recipes/blt.html">BLT Recipe</a></li>
-            <li><a href="recipes/carrotcake.html">Carrot Cake Recipe</a></li>
+            <li><a href="recipes/sandwich.html">Sandwich Recipe</a></li>
+            <li><a href="recipes/cupcake.html">Cupcake Recipe</a></li>
             <li><a href="recipes/waffles.html">Waffles Recipe</a></li>
         </ul>       
     </body>
