Change recipe links to images

--- a/001-recipes/index.html
+++ b/001-recipes/index.html
@@ -6,12 +6,20 @@
         <title>Odin's Recipes</title>
     </head>
     <body>
-        <img src="assets/img/chef.jpg" alt="A chef.">
-        <h1>Odin's Recipes</h1>
-        <ul>
-            <li><a href="recipes/sandwich.html">Sandwich Recipe</a></li>
-            <li><a href="recipes/cupcake.html">Cupcake Recipe</a></li>
-            <li><a href="recipes/waffles.html">Waffles Recipe</a></li>
-        </ul>       
+        <div class="container" id="container">
+            <img src="assets/img/chef.jpg" alt="A chef.">
+            <h1>Odin's Recipes</h1>
+            <ul>
+                <li><a href="recipes/sandwich.html">
+                    <img src="assets/img/sandwich.jpg" title="Sandwich Recipe" alt="A sandwich.">
+                </a></li>
+                <li><a href="recipes/cupcake.html">
+                    <img src="assets/img/cupcake.jpg" title="Cupcake Recipe" alt="A cupcake.">
+                </a></li>
+                <li><a href="recipes/waffles.html">
+                    <img src="assets/img/waffles.jpg" title="Waffles Recipe" alt="Breakfast waffles.">
+                </a></li>
+            </ul>
+    </div>       
     </body>
 </html>
