Add CSS styling to recipes website

--- a/001-recipes/index.html
+++ b/001-recipes/index.html
@@ -4,22 +4,35 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Odin's Recipes</title>
+        <link rel="stylesheet" href="assets/css/style.css" />
     </head>
     <body>
         <div class="container" id="container">
-            <img src="assets/img/chef.jpg" alt="A chef.">
-            <h1>Odin's Recipes</h1>
-            <ul>
-                <li><a href="recipes/sandwich.html">
-                    <img src="assets/img/sandwich.jpg" title="Sandwich Recipe" alt="A sandwich.">
-                </a></li>
-                <li><a href="recipes/cupcake.html">
+            <div class="homepage-container">
+                <div class="homepage-image">
+                    <img src="assets/img/chef.jpg" alt="A chef.">
+                </div>
+                <div class="homepage-title">
+                    <h1>Odin's Recipes</h1>
+                </div>
+            </div>
+            <div class="recipe-links">
+                <div class="recipe-link">            
+                    <a href="recipes/sandwich.html">
+                        <img src="assets/img/sandwich.jpg" title="Sandwich Recipe" alt="A sandwich.">
+                    </a>
+                </div>
+                <div class="recipe-link">
+                <a href="recipes/cupcake.html">
                     <img src="assets/img/cupcake.jpg" title="Cupcake Recipe" alt="A cupcake.">
-                </a></li>
-                <li><a href="recipes/waffles.html">
-                    <img src="assets/img/waffles.jpg" title="Waffles Recipe" alt="Breakfast waffles.">
-                </a></li>
-            </ul>
+                </a>
+                </div>
+                <div class="recipe-link">   
+                    <a href="recipes/waffles.html">
+                        <img src="assets/img/waffles.jpg" title="Waffles Recipe" alt="Breakfast waffles.">
+                    </a>
+                </div>
+            </div>
     </div>       
     </body>
 </html>
