--- a/001-recipes/recipes/sandwich.html
+++ b/001-recipes/recipes/sandwich.html
@@ -4,32 +4,55 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Sandwich Recipe</title>
+        <link rel="stylesheet" href="../assets/css/recipes.css"/>
     </head>
     <body>
-        <h1>Sandwich Recipe</h1>
-        <img src="../assets/img/sandwich.jpg" alt="A sandwich.">
-        <h3>Description</h3>
-        <p>This is a recipe for making a sandwich.</p>
-        <h3>Time</h3>
-        <ul>
-            <li><strong>Prep:</strong> 10 min</li>
-            <li><strong>Cook:</strong> 10 min</li>
-            <li><strong>Total:</strong> 20 min</li>
-        </ul>
-        <h3>Ingredients</h3>
-        <ul>
-            <li>Ingredient A</li>
-            <li>Ingredient B</li>
-            <li>Ingredient C</li>
-            <li>Ingredient D</li>
-        </ul>
-        <h3>Steps</h3>
-        <ol>
-            <li>Step 1</li>
-            <li>Step 2</li>
-            <li>Step 3</li>
-            <li>Step 4</li>
-        </ol>
-        <a href="../index.html">Home</a>
+        <div class="container" id="container">
+            <div class="homepage-link">
+                <a href="../index.html">
+                    <img src="../assets/img/chef.jpg" title="Homepage" alt="A chef.">
+                </a>
+            </div>
+            <div class="recipe-container">
+                <div class="recipe-title">
+                    <h1>Sandwich Recipe</h1>
+                </div>
+                <div class="recipe-image">
+                    <img src="../assets/img/sandwich.jpg" alt="A sandwich.">
+                </div>
+                <div class="recipe-info">
+                    <div class="recipe-description">
+                        <h3>Description</h3>
+                        <p>This is a recipe for making a sandwich.</p>
+                    </div>
+                    <div class="recipe-time">
+                        <h3>Time</h3>
+                        <ul>
+                            <li><strong>Prep:</strong> 10 min</li>
+                            <li><strong>Cook:</strong> 10 min</li>
+                            <li><strong>Total:</strong> 20 min</li>
+                        </ul>
+                    </div>
+                    <div class="recipe-ingredients">
+                        <h3>Ingredients</h3>
+                        <ul>
+                            <li>Ingredient A</li>
+                            <li>Ingredient B</li>
+                            <li>Ingredient C</li>
+                            <li>Ingredient D</li>
+                        </ul>
+                    </div>
+                    <div class="recipe-steps">
+                        <h3>Steps</h3>
+                        <ol>
+                            <li>Step 1</li>
+                            <li>Step 2</li>
+                            <li>Step 3</li>
+                            <li>Step 4</li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
