--- a/001-recipes/index.html
+++ b/001-recipes/index.html
@@ -10,26 +10,26 @@
         <div class="container" id="container">
             <div class="homepage-container">
                 <div class="homepage-image">
-                    <img src="assets/img/chef.jpg" alt="A chef.">
+                    <img src="assets/img/chef.svg" alt="A chef.">
                 </div>
                 <div class="homepage-title">
                     <h1>Odin's Recipes</h1>
                 </div>
             </div>
-            <div class="recipe-links">
+            <div class="recipe-links-container">
                 <div class="recipe-link">            
                     <a href="recipes/sandwich.html">
-                        <img src="assets/img/sandwich.jpg" title="Sandwich Recipe" alt="A sandwich.">
+                        <img src="assets/img/sandwich.svg" title="Sandwich Recipe" alt="A sandwich.">
                     </a>
                 </div>
                 <div class="recipe-link">
                 <a href="recipes/cupcake.html">
-                    <img src="assets/img/cupcake.jpg" title="Cupcake Recipe" alt="A cupcake.">
+                    <img src="assets/img/cupcake.svg" title="Cupcake Recipe" alt="A cupcake.">
                 </a>
                 </div>
                 <div class="recipe-link">   
                     <a href="recipes/waffles.html">
-                        <img src="assets/img/waffles.jpg" title="Waffles Recipe" alt="Breakfast waffles.">
+                        <img src="assets/img/waffles.svg" title="Waffles Recipe" alt="Breakfast waffles.">
                     </a>
                 </div>
             </div>
