--- a/001-recipes/recipes/waffles.html
+++ b/001-recipes/recipes/waffles.html
@@ -8,22 +8,17 @@
     </head>
     <body>
         <div class="container" id="container">
-            <div class="homepage-link">
-                <a href="../index.html">
-                    <img src="../assets/img/chef.jpg" title="Homepage" alt="A chef.">
-                </a>
-            </div>
             <div class="recipe-container">
                 <div class="recipe-title">
                     <h1>Waffles Recipe</h1>
                 </div>
                 <div class="recipe-image">
-                    <img src="../assets/img/waffles.jpg" alt="Breakfast waffles.">
+                    <img src="../assets/img/waffles.svg" alt="Waffles.">
                 </div>
                 <div class="recipe-info">
                     <div class="recipe-description">
                         <h3>Description</h3>
-                        <p>This is a recipe for making waffles.</p>
+                        <p>This is a recipe for making Waffles.</p>
                     </div>
                     <div class="recipe-time">
                         <h3>Time</h3>
@@ -52,6 +47,11 @@
                         </ol>
                     </div>
                 </div>
+            </div>
+            <div class="homepage-link">
+                <a href="../index.html">
+                    <img src="../assets/img/chef.svg" title="Homepage" alt="A chef.">
+                </a>
             </div>
         </div>
     </body>
