--- a/002-landing-page/index.html
+++ b/002-landing-page/index.html
@@ -8,53 +8,53 @@
     </head>
     <body>
         <div class="container">
-            <div class="section header">
-                <h1 class="logo">
+            <div class="section header bg-darkblue">
+                <h1 class="logo text-white1 text-size24">
                     Header Logo
                 </h1>
-                <ul class="links">
+                <ul class="nav text-white2 text-size18">
                     <li><a href="#">one</a></li>
                     <li><a href="#">two</a></li>
                     <li><a href="#">three</a></li>
                 </ul>          
             </div>
-            <div class="section hero">
+            <div class="hero section bg-darkblue">
                 <div class="left">
-                    <h1 class="main-text">
+                    <h1 class="main-text text-white1 text-size48">
                         This website is awesome
                     </h1>
-                    <p class="secondary-text">
+                    <p class="secondary-text text-white2 text-size18">
                         This website has some subtext that goes here under the main title. 
                         It's a smaller font and the color is a lower contrast.
                     </p>
-                    <button class="signup-btn">Sign Up</button>
+                    <button class="signup-btn bg-lightblue text-white2 text-size18">Sign Up</button>
                 </div>
-                <div class="hero-img">
+                <div class="right">
                     <img src="assets/img/placeholder-large.jpg" title="large placeholder">
                 </div>
             </div>
-            <div class="section info">
-                <h3 class="title">Some random information</h3>
-                <div class="illustrations">
-                    <div class="illustration">
+            <div class="info section">
+                <h3 class="info-title text-size36">Some random information</h3>
+                <div class="info-content">
+                    <div class="info-box">
                         <img src="assets/img/placeholder-small.jpg" title="small placeholder"/>
                         <p>
                             this is some subtext under an illustration or image
                         </p>
                     </div>
-                    <div class="illustration">
+                    <div class="info-box">
                         <img src="assets/img/placeholder-small.jpg" title="small placeholder"/>
                         <p>
                             this is some subtext under an illustration or image
                         </p>
                     </div>
-                    <div class="illustration">
+                    <div class="info-box">
                         <img src="assets/img/placeholder-small.jpg" title="small placeholder"/>
                         <p>
                             this is some subtext under an illustration or image
                         </p>
                     </div>
-                    <div class="illustration">
+                    <div class="info-box">
                         <img src="assets/img/placeholder-small.jpg" title="small placeholder"/>
                         <p>
                             this is some subtext under an illustration or image
@@ -62,30 +62,28 @@
                     </div>
                 </div>
             </div>
-            <div class="section quote">
-                <p class="text">
+            <div class="quote section bg-lightgray">
+                <p class="text text-size36">
                     This is an inspiring quote, or a testimonial from a customer.
                     Maybe it's just filling up space, or maybe people will actually read it.
                     Who knows? All I know is that it looks nice.
                 </p>
-                <span class="quotee">
+                <span class="quotee text-size36">
                     - Thor, God of Thunder
                 </span>
             </div>
-            <div class="section c2a">
-                <div class="content">
-                    <div class="left">
-                        <strong class="title">Call to action! It's time!</strong>
+            <div class="c2a section">
+                <div class="c2a-content bg-lightblue">
+                    <div class="left text-white2 text-size18">
+                        <strong class="c2a-title">Call to action! It's time!</strong>
                         <p class="text">Sign up for our product by clicking that button right over there!</p>
                     </div>
-                    <div class="right">
-                        <button class="signup-btn">Sign Up</button>
-                    </div>
-                   
-                    
+                    <div class="right text-white2 text-size18">
+                        <button class="signup-btn bg-lightblue">Sign Up</button>
+                    </div>          
                 </div>
             </div>
-            <div class="section footer">
+            <div class="footer section bg-darkblue text-white2 text-size18">
                 Copyright © The Odin Project 2021
             </div>
         </div>
